--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/assets/css/style.css">
+    <link rel="stylesheet" href="../static/assets/css/global.css">
 </head>
 <body>
 <section id="contact"></section>
-<script type="module" src="../static/js/main.js"></script>
+<script type="module" src="../static/assets/js/main.js"></script>
 </body>
 </html>
